2015-06-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_undo, add_undo): Skip undoing a backspace *only* when
	it really tried to delete the final, magic newline.
	* src/nano.h, src/text.c: Rename three flags for clarity.

2015-06-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Verify that there exists multidata for the
	found starting line before trying to use it.  When a file is inserted
	(^R), it will not have any precalculated multidata associated with it.
	This fixes Savannah bug #45377 reported by Cody A. Taylor.

2015-06-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_research): If nothing was searched for yet during
	this run of nano, take the most recent item from the search history.
	This makes M-W work also right after startup, like <n> in vim/less.
	* src/utils.c (get_homedir): Keep homedir NULL when no home directory
	could be determined, so that nano will show a message about it.  This
	is a fix for Savannah bug #45343.
	* doc/syntax/nanorc.nanorc: Colour key-binding lines affirmatively
	only when the specified menu name is an existing one.
	* doc/syntax/changelog.nanorc: Stop the changed-files colour from
	spilling beyond a blank line.  Also highlight releases.
	* src/nano.c (main), src/rcfile.c: Remove the obsolete long option
	--undo.  And sort --help and the softwrap option more consistently.

2015-06-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c: Allow a tiny nano's ~/.nanorc to enable search and
	position histories.  Also sort the options more strictly.
	* src/nano.h: Delete two unused things, and add two comments.

2015-06-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_undo, add_undo): When undoing a Backspace at the tail
	of the file and nonewlines is not set, then don't add another newline
	but just reposition the cursor.  Also, when doing a Delete at the tail
	of the file, don't add a superfluous undo structure.  This prevents